# zackstrap

./: .clippy.toml  .codecov.yml  .editorconfig  .gitignore  .prettierrc  CACHING.md  CHANGELOG.md  CI_OPTIMIZATION_SUMMARY.md  CLAUDE.md  CLEANUP_PLAN.md  Cargo.toml  LICENSE  LSP_TROUBLESHOOTING.md  README.md  ROADMAP.md  SETUP.md  STACK-SETUP.md  STORY.md  TODO.md  justfile  package-lock.json  package.json  rustfmt.toml
.cargo/: config.toml
.claude/: MEMSTACK.md  config.local.json  ecc-tools.json  identity.json
.claude/commands/: memstack-headroom.md  memstack-search.md  refactor-generator-file-writing.md  release-version-bump.md
.claude/db/: memstack-db.py  memstack.db  migrate.py  schema.sql
.claude/rules/: diary.md  echo.md  headroom.md  kdp-format.md  memstack.md  notify.md  pro-skills.md  work.md
.claude/skills/api-docs/: SKILL.md
.claude/skills/compress/: SKILL.md
.claude/skills/consolidate/: SKILL.md
.claude/skills/context-db/: SKILL.md
.claude/skills/diary/: SKILL.md
.claude/skills/echo/: SKILL.md
.claude/skills/familiar/: SKILL.md
.claude/skills/forge/: SKILL.md
.claude/skills/governor/: SKILL.md
.claude/skills/grimoire/: SKILL.md
.claude/skills/humanize/: SKILL.md
.claude/skills/kdp-format/: SKILL.md
.claude/skills/project/: SKILL.md
.claude/skills/quill/: SKILL.md
.claude/skills/scan/: SKILL.md
.claude/skills/shard/: SKILL.md
.codex/: AGENTS.md
.github/workflows/: cache-setup.yml  ci.yml  lint-optimized.yml  lint.yml  release.yml  test-optimized.yml  test.yml
src/: commands.rs  config.rs  error.rs  generators.rs  lib.rs  main.rs
src/generators/: bash.rs  basic.rs  common.rs  go.rs  hooks.rs  mod.rs  node.rs  python.rs  ruby.rs  rust.rs
tests/: cli_tests.rs  e2e_tests.rs  fail_on_exists_tests.rs  generators_tests.rs  integration_tests.rs  unit_tests.rs
(+7 files in other folders)
