[package]
name = "zackstrap"
version = "0.1.0"
edition = "2021"
authors = ["Zack Kitzmiller"]
description = "A CLI tool to bootstrap project configuration files"
license = "MIT"
repository = "https://github.com/yourusername/zackstrap"
keywords = ["cli", "bootstrap", "configuration", "project-setup"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
indicatif = "0.17"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.1"

[[bin]]
name = "zackstrap"
path = "src/main.rs"
